# NikoEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  NikoEngine.sln  README.md
NikoEngine/: NikoEngine.vcxproj  NikoEngine.vcxproj.filters  imgui.ini  main.cpp
NikoEngine/Camera/: Camera.h
NikoEngine/Renderer/: InputHandler.h  Primative.h  TimeKeeper.cpp  TimeKeeper.h  Transform.cpp  Transform.h  VulkanRenderer.cpp  VulkanRenderer.h  variables.h
NikoEngine/Scene/: BaseScene.cpp  BaseScene.h
NikoEngine/shaders/: shader.vert
Source/: CMakeLists.txt  main.cpp
Source/Camera/: Camera.h
Source/Renderer/: InputHandler.h  Primative.h  Transform.cpp  Transform.h  VulkanRenderer.cpp  VulkanRenderer.h  variables.h
Source/Scene/: BaseScene.cpp  BaseScene.h
Source/shaders/: compile.sh  gFrag.spv  gShader.frag  gShader.vert  gVert.spv  vert.spv
